# PuzzelBox

./: .gitignore  CMakeLists.txt  workspace.code-workspace
Bomb/Source/: .gitingnore  CMakeCache.txt  CMakeLists.txt  CMakeLists_rpi.txt  CMakeLists_ubuntu.txt  Makefile  cmake_install.cmake
Bomb/Source/inc/: AssembleConnection.h  Biem.h  Bom.h  Config.h  Fuses.h  JumperInterconnect.h
Bomb/Source/inc/Peripherals/: Display.h  Gpio.h  I2Cinterface.h  Keypad.h  Sound.h  SpiInterface.h  StLedDriver.h  Tca8418Interface.h
Bomb/Source/src/: AssembleConnection.cpp  Biem.c  Bom.cpp  Fuses.cpp  JumperInterconnect.cpp  main.cpp
Bomb/Source/src/Peripherals/: Display.cpp  Gpio.cpp  I2Cinterface.cpp  Keypad.cpp  Sound.cpp  SpiInterface.cpp  StLedDriver.cpp  Tca8418Interface.cpp
Communication/PuzzelComm/include/: I2C_Controller.h
Communication/PuzzelComm/include/FixedI2C/: DataChecker.h  FixedI2C.h
Communication/PuzzelComm/src/: I2C_Controller.cpp  main.cpp
Communication/PuzzelComm/src/FixedI2C/: FixedI2c.cpp
Mainboard/: CMakeCache.txt  CMakeLists.txt  MainBoard  Makefile  README.md  cmake_install.cmake
Mainboard/include/: GpioManager.h  State.h  Test.h
Mainboard/include/States/: CheckState.h  CompletedState.h  EntryState.h  HybernateState.h  InitializeState.h  RunningState.h
Mainboard/src/: GpioManager.cpp  StateMachine.cpp  Test.cpp  main.cpp
Mainboard/src/States/: CheckState.cpp  CompletedState.cpp  EntryState.cpp  HybernateState.cpp  InitializeState.cpp  RunningState.cpp
MainhubComm/: DataChecker.cpp  DataChecker.h  DataUnwrapper.cpp  DataUnwrapper.h  DataWrapper.cpp  DataWrapper.h  I2C.cpp  I2C.h  I2CController  I2C_Controller.cpp  I2C_Controller.h  I2C_Controller.hpp  Mails.h  Mails.hpp  ctest.cpp
PiHub/: startHub.sh
PiHub/SocketCommunication/: .env  ClientTest.py  Server.py  asyncClient.js  asyncServer.js  asyncServer.py  package.json
PiHub/boxnet-admin/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
PiHub/boxnet-admin/public/: index.html
PiHub/boxnet-admin/src/: App.vue  main.js
PiHub/boxnet-admin/src/components/: BomSettingsCard.vue  BoxSettingsCard.vue  DeviceCard.vue  DeviceLinkCard.vue  SideNav.vue  TopNav.vue
PiHub/boxnet-admin/src/router/: index.js
PiHub/boxnet-admin/src/socket/: index.js
PiHub/boxnet-admin/src/store/: index.js
PiHub/boxnet-admin/src/views/: CreateGameView.vue  DashView.vue  DeviceLinkView.vue  GameListView.vue  HomeView.vue  LoginView.vue  NetworkView.vue  TestView.vue
PiHub/localcmd/: getip.sh  getmac.sh
PiHub/socketcom/: ComConstant.py  package-lock.json
PiHub/socketcom/client/: ClientTest.py  asyncClient.js  client  client.cpp  startDummies.sh
PiHub/socketcom/server/: Server.py  asyncServer.js  boxnet-socket-server.service  device-socket.js  socket-server.js  web-socket.js
PiHub/socketcom/server/.python/: asyncServer.py
PiHub/socketcom/server/data/: device.js  device_links.json  game.js  game_list.json
PiHub/socketcom/server/handlers/: deviceManagementHandler.js  typeHandler.js  webManagementHandler.js
PiHub/socketcom/server/sockets/: device-socket.js  web-socket.js
Puzzels/NeoTrellis/: README.md
Puzzles/HardwarePuzzle/: README.md  platformio.ini
Puzzles/HardwarePuzzle/include/: GpioManager.h
Puzzles/HardwarePuzzle/include/States/: HybernateState.h  RunningState.h
Puzzles/HardwarePuzzle/src/: GpioManager.cpp  I2C_Controller.cpp  StateMachine.cpp  Utils.cpp
Puzzles/NeoTrellisPuzzle/: platformio.ini
Puzzles/NeoTrellisPuzzle/include/: GpioManager.h  I2C_Controller.hpp
Puzzles/NeoTrellisPuzzle/src/: GpioManager.cpp  I2C_Controller.cpp  StateMachine.cpp  main.cpp
Puzzles/SafePuzzle/: platformio.ini
Puzzles/SafePuzzle/include/: GpioManager.h  I2C_Controller.h
Puzzles/SafePuzzle/src/: GpioManager.cpp  I2C_Controller.cpp  StateMachine.cpp
Puzzles/SoftwarePuzzle/include/: GpioManager.h  Mails.h  Mails.hpp  State.h  StateMachine.h  Utils.h
Puzzles/SoftwarePuzzle/src/: GpioManager.cpp  StateMachine.cpp  Utils.cpp  main.cpp
Puzzles/TemplateStatemachine/include/: GpioManager.h  State.h  StateMachine.h
Puzzles/TemplateStatemachine/src/: GpioManager.cpp
(+35 files in other folders)
